<resources>
    <string name="app_name">BGB</string>
    <string name="menu_inicio">INICIO</string>
    <string name="menu_categories">CATEGORÍAS</string>
    <string name="menu_establishments">LOCALES</string>
    <string name="menu_companies">EMPRESAS</string>
    <string name="popular_games">Juegos populares</string>
    <string name="popular_categories">Categorías populares</string>
    <string name="close_establishments">Locales cercanos</string>
    <string name="details_button_label">Detalles</string>
    <string name="expansions_button_label">Expansiones</string>
    <string name="rooms_button_label">Salas</string>
    <string name="like_button_label">Me gusta</string>
    <string name="game_image">Imagen del juego</string>
    <string name="game_description">Descripción del juego</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="repeatPassword">Repite contraseña</string>
    <string name="email">E-Mail</string>
    <string name="search">Buscar</string>
    <string name="my_profile">Mi perfil</string>
    <string name="my_games">Mis juegos</string>
    <string name="ratings">Valoraciones</string>
    <string name="my_rooms">Mis salas</string>
    <string name="logout">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noAccountGoRegister">¿No tienes una cuenta?</string>
    <string name="name">Nombre</string>
    <string name="your_name">Su nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="your_last_name">Sus apellidos</string>
    <string name="save">Guardar</string>
    <string name="search_hint">Titulo del juego</string>
    <string name="search_results">Resultados de la búsqueda</string>
</resources>