<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GameFragments.MainGameFragment">

    <ImageView
        android:id="@+id/GameImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/game_image"
        android:maxHeight="350dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/GameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/game_description"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameImage" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameDescription">

        <Button
            android:id="@+id/GameDetailsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/details_button_label"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/game_button_outer_margin"
            android:layout_marginRight="@dimen/game_button_inner_margin"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/GameExpansionsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/expansions_button_label"
            android:layout_marginLeft="@dimen/game_button_outer_margin"
            android:layout_marginRight="@dimen/game_button_inner_margin"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GameDetailsButton" />

        <Button
            android:id="@+id/GameLikeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/like_button_label"
            android:layout_marginHorizontal="20dp"
            app:icon="@drawable/ic_baseline_star_outline_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GameExpansionsButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/GameRoomsButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/game_button_inner_margin"
            android:layout_marginRight="@dimen/game_button_outer_margin"
            android:layout_marginTop="10dp"
            android:text="@string/rooms_button_label"
            app:icon="@drawable/ic_baseline_category_24"
            app:iconGravity="top"
            app:layout_constraintBottom_toTopOf="@+id/GameLikeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>